# mfs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PLANS.md  QUALITY.md  RELIABILITY.md  SECURITY.md  SPEC.md
docs/agents/: domain.md
docs/references/: modal-client-audit.md
docs/releases/: v0.0.1.md
spikes/001-modal-profile-adapter/: README.md  main.py
spikes/001-modal-profile-adapter/results/: tabtablabs-main.sanitized.json
spikes/002-rustfs-s3-gateway-modal/: .env.example  Makefile  README.md  modal_rustfs_app.py  requirements.txt  smoke_test.py
src/mfs/: __init__.py  cli.py  errors.py  index.py  modal_adapter.py  output.py  paths.py  state.py
tests/: test_cli.py
