[project]
name = "mfs"
version = "0.0.1"
description = "Modal Volume filesystem/query CLI for agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "mfs contributors" },
]
keywords = ["modal", "volumes", "filesystem", "cli", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
]
dependencies = [
  "aiohttp>=3.9",
  "click>=8.1",
  "modal>=1.3.5,<2",
]

[project.scripts]
mfs = "mfs.cli:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
exclude = ["spikes"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
